hikey_defconfig: Enable HID_APPLE to support apple bluetooth keyboards
After chasing my tail for a bit, I realized my cheap 3rd party bt
keyboard was targetted as an ipad keyboard, and thus tries to
behave like an apple keyboard.

Adding support for HID_APPLE resolves the issues I was seeing with
bt keyboards not working.

Change-Id: I3112b32a7c1cd0ba1b8fea0c79268a9d3803cfdd
Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/arch/arm64/configs/hikey_defconfig
+++ b/arch/arm64/configs/hikey_defconfig
@@ -291,6 +291,7 @@ CONFIG_FB_SIMPLE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_UHID=y
+CONFIG_HID_APPLE=y
 CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
