Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,5 @@
 [access]
 	inheritFrom = Platform-Unrestricted-Projects
+[access "^refs/heads/android-hikey-linaro-.*"]
+	create = group AOSP
+	push = group AOSP
