--- a/arch/arm64/configs/hikey_defconfig
+++ b/arch/arm64/configs/hikey_defconfig
@@ -292,6 +292,7 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
+CONFIG_HID_MULTITOUCH=y
 CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
