Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access]
 	inheritFrom = Platform-Unrestricted-Projects
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group Android Maintainers
+	label-Verified = -1..+1 group Android Maintainers
+	submit = group Android Maintainers
