--- a/build.config
+++ b/build.config
@@ -3,7 +3,7 @@ BRANCH=android-hikey-linaro-4.1
 CROSS_COMPILE=aarch64-linux-android-
 DEFCONFIG=hikey_defconfig
 EXTRA_CMDS=''
-KERNEL_DIR=private/hikey-linaro
+KERNEL_DIR=hikey-linaro
 LINUX_GCC_CROSS_COMPILE_PREBUILTS_BIN=prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/bin
 FILES="
 arch/arm64/boot/Image
