Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,6 @@
 	label-Code-Review = -2..+2 group Android Maintainers
 	label-Verified = -1..+1 group Android Maintainers
 	submit = group Android Maintainers
+	forgeAuthor = group kernel-admin
+	forgeCommitter = group kernel-admin
+	push = group kernel-admin
