--- a/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
+++ b/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
@@ -47,6 +47,12 @@
 		      <0x00000000 0x07410000 0x00000000 0x1aaf0000>,
 		      <0x00000000 0x22000000 0x00000000 0x1c000000>;
 	};
+	firmware {
+		optee {
+			compatible = "linaro,optee-tz";
+			method = "smc";
+		};
+	};
 
 	pstore: pstore@0x21f00000 {
 		no-map;
